--- a/Data analysis/Data wrangling.ipynb
+++ b/Data analysis/Data wrangling.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> Transformación de los datos</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>El propósito es realizar una transformación de los datos para mejorar el análisis</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2> Importar los datos </h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +252,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +262,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2> Como trabajar con los datos perdidos </h2\n",
+    "   <div>\n",
+    "    Pasos:\n",
+    "    <ol>\n",
+    "        <li>Identificar los datos perdidos</li>\n",
+    "        <li>Actuar sobre estos datos</li>\n",
+    "        <li>Corregir el formato de todos los datos</li>\n",
+    "    </ol>   \n",
+    "    </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Convertir \"?\" en NaN </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +320,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,8 +332,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Identificando valores pérdidos</h3>\n",
+    "<p> el método <code> .isnull()</code> permite encontrar los valores pérdidos (False) para poder ser reemplazados \n",
+    "    más facilmente </p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -495,13 +547,14 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "missing_data = df.isnull() \n",
+    "# también existe .notnull()\n",
     "missing_data.tail()# checking missing values \n",
     "# True -> missing value NaN\n",
     "# False -> not a missing value"
@@ -509,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -521,13 +574,13 @@
     }
    ],
    "source": [
-    "columns = missing_data.columns.values.tolist()\n",
+    "columns = missing_data.columns.values.tolist() # lista con los encabezados de las columnas\n",
     "print(columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -656,6 +709,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Resolver el problema de valores perdidos </h3>\n",
+    " <ol>\n",
+    "    <li>Eliminar el dato:<br>\n",
+    "        a. Eliminar todo el registro. (fila)\n",
+    "        b. Eliminar la columna.\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        Reemplazar el dato:<br>\n",
+    "        a. Reemplazar por el promedio. <br>\n",
+    "        b. Reemplazar por el dato de mayor frecuecia<br>\n",
+    "        c. Reemplazarlo en base a otras funciones\n",
+    "    </li>\n",
+    " </ol>   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Reemplazar por el promedio </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -669,8 +748,7 @@
     }
    ],
    "source": [
-    "# dealing with missing values\n",
-    "# replace by mean\n",
+    "\n",
     "avg_norm_loss = df['normalized-losses'].astype(\"float\").mean(axis = 0)\n",
     "print(f\"avg_norm_loss: {avg_norm_loss}\")\n",
     "df['normalized-losses'].replace(np.nan, avg_norm_loss, inplace = True)"
@@ -696,64 +774,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.62                  23\n",
-      "3.19                  20\n",
-      "3.15                  15\n",
-      "2.97                  12\n",
-      "3.03                  12\n",
-      "3.46                   9\n",
-      "3.78                   8\n",
-      "3.43                   8\n",
-      "3.31                   8\n",
-      "2.91                   7\n",
-      "3.27                   7\n",
-      "3.58                   6\n",
-      "3.05                   6\n",
-      "3.39                   6\n",
-      "3.54                   6\n",
-      "3.70                   5\n",
-      "3.01                   5\n",
-      "3.3297512437810957     4\n",
-      "3.35                   4\n",
-      "3.17                   3\n",
-      "3.74                   3\n",
-      "3.59                   3\n",
-      "3.94                   2\n",
-      "3.80                   2\n",
-      "3.47                   2\n",
-      "3.24                   2\n",
-      "3.13                   2\n",
-      "3.50                   2\n",
-      "3.63                   2\n",
-      "3.33                   2\n",
-      "3.08                   1\n",
-      "2.99                   1\n",
-      "2.68                   1\n",
-      "3.60                   1\n",
-      "3.76                   1\n",
-      "2.92                   1\n",
-      "2.54                   1\n",
-      "3.61                   1\n",
-      "3.34                   1\n",
-      "Name: bore, dtype: int64\n"
-     ]
-    }
-   ],
    "source": [
-    "print(df['bore'].value_counts())"
+    "<h3>Reemplazar por dato de mayor frecuencia </h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +791,7 @@
        "'four'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
