--- a/Data analysis/Importing datasets.ipynb
+++ b/Data analysis/Importing datasets.ipynb
@@ -2,13 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd # pandas library\n",
     "import matplotlib.pyplot as plt #matplotlib\n",
-    "%matplotlib inline "
+    "%matplotlib inline A"
    ]
   },
   {
@@ -1327,8 +1334,7 @@
     }
    ],
    "source": [
-    "# delete NaN's\n",
-    "\n",
+    "# delete NaN's from price column\n",
     "dataframe.dropna(subset=[\"price\"], axis=0)"
    ]
   },
@@ -1998,13 +2004,6 @@
    "source": [
     "dataframe['highway-mpg'].plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
