--- a/Data analysis/KPMG_technical_test/notebook.ipynb
+++ b/Data analysis/KPMG_technical_test/notebook.ipynb
@@ -271,9 +271,171 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "\n",
     "df = pd.read_csv('datasets_18290_23922_hmeq.csv') # Se lee el archivo csv\n",
     "df.head(10) # se imprimen los primeros 10 registros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eliminar el registro 3 ya que tiene casi todos sus valores en NaN\n",
+    "df = df.drop([3]) # eliminar en base al index "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BAD</th>\n",
+       "      <th>LOAN</th>\n",
+       "      <th>MORTDUE</th>\n",
+       "      <th>VALUE</th>\n",
+       "      <th>REASON</th>\n",
+       "      <th>JOB</th>\n",
+       "      <th>YOJ</th>\n",
+       "      <th>DEROG</th>\n",
+       "      <th>DELINQ</th>\n",
+       "      <th>CLAGE</th>\n",
+       "      <th>NINQ</th>\n",
+       "      <th>CLNO</th>\n",
+       "      <th>DEBTINC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>25860.0</td>\n",
+       "      <td>39025.0</td>\n",
+       "      <td>HomeImp</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94.366667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>70053.0</td>\n",
+       "      <td>68400.0</td>\n",
+       "      <td>HomeImp</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>121.833333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>13500.0</td>\n",
+       "      <td>16700.0</td>\n",
+       "      <td>HomeImp</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>149.466667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>97800.0</td>\n",
+       "      <td>112000.0</td>\n",
+       "      <td>HomeImp</td>\n",
+       "      <td>Office</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>93.333333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>30548.0</td>\n",
+       "      <td>40320.0</td>\n",
+       "      <td>HomeImp</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.466002</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>37.113614</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   BAD  LOAN  MORTDUE     VALUE   REASON     JOB   YOJ  DEROG  DELINQ  \\\n",
+       "0    1  1100  25860.0   39025.0  HomeImp   Other  10.5    0.0     0.0   \n",
+       "1    1  1300  70053.0   68400.0  HomeImp   Other   7.0    0.0     2.0   \n",
+       "2    1  1500  13500.0   16700.0  HomeImp   Other   4.0    0.0     0.0   \n",
+       "3    0  1700  97800.0  112000.0  HomeImp  Office   3.0    0.0     0.0   \n",
+       "4    1  1700  30548.0   40320.0  HomeImp   Other   9.0    0.0     0.0   \n",
+       "\n",
+       "        CLAGE  NINQ  CLNO    DEBTINC  \n",
+       "0   94.366667   1.0   9.0        NaN  \n",
+       "1  121.833333   0.0  14.0        NaN  \n",
+       "2  149.466667   1.0  10.0        NaN  \n",
+       "3   93.333333   0.0  14.0        NaN  \n",
+       "4  101.466002   1.0   8.0  37.113614  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.reset_index(inplace = True, drop = True) # reinicia el index sin generar una nueva columna y aplicando los cambios\n",
+    "                                            # en el mismo df\n",
+    "df.head()"
    ]
   },
   {
@@ -285,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +487,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>5960.000000</td>\n",
-       "      <td>5960.000000</td>\n",
+       "      <td>5959.000000</td>\n",
+       "      <td>5959.000000</td>\n",
        "      <td>5442.000000</td>\n",
        "      <td>5848.000000</td>\n",
        "      <td>5445.000000</td>\n",
@@ -339,8 +501,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.199497</td>\n",
-       "      <td>18607.969799</td>\n",
+       "      <td>0.199362</td>\n",
+       "      <td>18610.840745</td>\n",
        "      <td>73760.817200</td>\n",
        "      <td>101776.048741</td>\n",
        "      <td>8.922268</td>\n",
@@ -353,8 +515,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.399656</td>\n",
-       "      <td>11207.480417</td>\n",
+       "      <td>0.399554</td>\n",
+       "      <td>11206.228934</td>\n",
        "      <td>44457.609458</td>\n",
        "      <td>57385.775334</td>\n",
        "      <td>7.573982</td>\n",
@@ -441,9 +603,9 @@
       ],
       "text/plain": [
        "               BAD          LOAN        MORTDUE          VALUE          YOJ  \\\n",
-       "count  5960.000000   5960.000000    5442.000000    5848.000000  5445.000000   \n",
-       "mean      0.199497  18607.969799   73760.817200  101776.048741     8.922268   \n",
-       "std       0.399656  11207.480417   44457.609458   57385.775334     7.573982   \n",
+       "count  5959.000000   5959.000000    5442.000000    5848.000000  5445.000000   \n",
+       "mean      0.199362  18610.840745   73760.817200  101776.048741     8.922268   \n",
+       "std       0.399554  11206.228934   44457.609458   57385.775334     7.573982   \n",
        "min       0.000000   1100.000000    2063.000000    8000.000000     0.000000   \n",
        "25%       0.000000  11100.000000   46276.000000   66075.500000     3.000000   \n",
        "50%       0.000000  16300.000000   65019.000000   89235.500000     7.000000   \n",
@@ -471,13 +633,33 @@
        "max     203.312149  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe() # análisis estadístico inicial del dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5959, 13)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -617,16 +799,16 @@
        "      <th>3</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -643,7 +825,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -654,15 +836,15 @@
        "0  False  False    False  False   False  False  False  False   False  False   \n",
        "1  False  False    False  False   False  False  False  False   False  False   \n",
        "2  False  False    False  False   False  False  False  False   False  False   \n",
-       "3  False  False     True   True    True   True   True   True    True   True   \n",
+       "3  False  False    False  False   False  False  False  False   False  False   \n",
        "4  False  False    False  False   False  False  False  False   False  False   \n",
        "\n",
        "    NINQ   CLNO  DEBTINC  \n",
        "0  False  False     True  \n",
        "1  False  False     True  \n",
        "2  False  False     True  \n",
-       "3   True   True     True  \n",
-       "4  False  False     True  "
+       "3  False  False     True  \n",
+       "4  False  False    False  "
       ]
      },
      "execution_count": 10,
@@ -774,12 +956,11 @@
     }
    ],
    "source": [
+    "# se recorre cada columna en búsqueda de valores NaN (True)\n",
     "for columna in columnas:\n",
     "    print(columna)\n",
     "    print(df_binario[columna].value_counts())\n",
-    "    print(\"-----\")\n",
-    "\n",
-    "# se recorre cada columna en búsqueda de valores NaN (True)"
+    "    print(\"-----\")"
    ]
   },
   {
