--- a/Data analysis/KPMG_technical_test/notebook.ipynb
+++ b/Data analysis/KPMG_technical_test/notebook.ipynb
@@ -287,147 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BAD</th>\n",
-       "      <th>LOAN</th>\n",
-       "      <th>MORTDUE</th>\n",
-       "      <th>VALUE</th>\n",
-       "      <th>REASON</th>\n",
-       "      <th>JOB</th>\n",
-       "      <th>YOJ</th>\n",
-       "      <th>DEROG</th>\n",
-       "      <th>DELINQ</th>\n",
-       "      <th>CLAGE</th>\n",
-       "      <th>NINQ</th>\n",
-       "      <th>CLNO</th>\n",
-       "      <th>DEBTINC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1100</td>\n",
-       "      <td>25860.0</td>\n",
-       "      <td>39025.0</td>\n",
-       "      <td>HomeImp</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>94.366667</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1300</td>\n",
-       "      <td>70053.0</td>\n",
-       "      <td>68400.0</td>\n",
-       "      <td>HomeImp</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>121.833333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>13500.0</td>\n",
-       "      <td>16700.0</td>\n",
-       "      <td>HomeImp</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>149.466667</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>97800.0</td>\n",
-       "      <td>112000.0</td>\n",
-       "      <td>HomeImp</td>\n",
-       "      <td>Office</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>93.333333</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>30548.0</td>\n",
-       "      <td>40320.0</td>\n",
-       "      <td>HomeImp</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.466002</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>37.113614</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   BAD  LOAN  MORTDUE     VALUE   REASON     JOB   YOJ  DEROG  DELINQ  \\\n",
-       "0    1  1100  25860.0   39025.0  HomeImp   Other  10.5    0.0     0.0   \n",
-       "1    1  1300  70053.0   68400.0  HomeImp   Other   7.0    0.0     2.0   \n",
-       "2    1  1500  13500.0   16700.0  HomeImp   Other   4.0    0.0     0.0   \n",
-       "3    0  1700  97800.0  112000.0  HomeImp  Office   3.0    0.0     0.0   \n",
-       "4    1  1700  30548.0   40320.0  HomeImp   Other   9.0    0.0     0.0   \n",
-       "\n",
-       "        CLAGE  NINQ  CLNO    DEBTINC  \n",
-       "0   94.366667   1.0   9.0        NaN  \n",
-       "1  121.833333   0.0  14.0        NaN  \n",
-       "2  149.466667   1.0  10.0        NaN  \n",
-       "3   93.333333   0.0  14.0        NaN  \n",
-       "4  101.466002   1.0   8.0  37.113614  "
+       "(5959, 1)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +304,9 @@
    "source": [
     "df.reset_index(inplace = True, drop = True) # reinicia el index sin generar una nueva columna y aplicando los cambios\n",
     "                                            # en el mismo df\n",
-    "df.head()"
+    "#df.head()\n",
+    "df_1 = df[['LOAN']]\n",
+    "df_1.shape"
    ]
   },
   {
